# mavros_external_tracker

./: CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  mavros_plugins.xml  package.xml
cfg/: Localization.cfg  Tracker.cfg
docker/: Dockerfile  docker-compose.yml
docker/armhf/: Dockerfile  docker-compose.yml
docker/gps-armhf/: Dockerfile  docker-compose.yml  gps.launch
launch/: apm_config.yaml  apm_pluginlists.yaml  erle_pozyx.launch  pozyx.launch  test.launch  test_localization.launch  test_odom.launch  test_utm.launch
scripts/: localization.py
src/: optitrack_bridge.cpp  optitrack_bridge_utm.cpp  range_finder.cpp
