<?xml version="1.0"?>
<package format="2">
  <name>mavros_external_tracker</name>
  <version>0.0.1</version>
  <description>
    Mocap plugin for <a href="http://wiki.rot.org/mavros">MAVROS</a>.
  </description>

  <maintainer email="jerome@idsia.ch">JG</maintainer>
  <author email="jerome@idsia.ch">JG</author>

  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <depend>mavros</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <export>
    <mavros plugin="${prefix}/mavros_plugins.xml" />
  </export>
</package>
